--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          # 為替取得
+          # 1. 為替取得
           USDJPY=$(curl -s "https://open.er-api.com/v6/latest/USD" | jq '.rates.JPY')
           DATE=$(date '+%Y-%m-%d %H:%M')
 
@@ -30,21 +30,21 @@ jobs:
             exit 1
           fi
 
-          # APIリクエスト (最も安全な構造)
+          # 2. APIリクエスト (URLをv1に変更し、モデル名を明示的に指定)
           RESPONSE=$(curl -s -X POST \
-            "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${GEMINI_API_KEY}" \
+            "https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=${GEMINI_API_KEY}" \
             -H 'Content-Type: application/json' \
             -d "{
               \"contents\": [{
                 \"parts\":[{
-                  \"text\": \"Current USD/JPY: ${USDJPY} (${DATE}). Analysis as FX trader. 1. Start with 'ACTION: BUY' or 'ACTION: WAIT'. 2. Brief reasons. 3. Japanese translation below.\"
+                  \"text\": \"Current USD/JPY: ${USDJPY} (${DATE}). Provide a professional trader's report. 1. Start with 'ACTION: BUY' or 'ACTION: WAIT'. 2. Brief reasons. 3. Provide Japanese translation below.\"
                 }]
               }]
             }")
 
           echo "Debug API Response: $RESPONSE"
 
-          # 結果の抽出
+          # 3. 結果の抽出
           ANALYSIS=$(echo "$RESPONSE" | jq -r '.candidates[0].content.parts[0].text // empty')
 
           if [ -z "$ANALYSIS" ] || [ "$ANALYSIS" == "null" ]; then
@@ -52,7 +52,7 @@ jobs:
             ANALYSIS="Error: Gemini API failed. Reason: $ERROR_MSG"
           fi
           
-          # GitHub環境変数への保存 (ヒアドキュメント形式)
+          # GitHub環境変数への保存
           {
             echo "REPORT_BODY<<EOF"
             echo "$ANALYSIS"
